--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.3
+Date: 2021.08.00
+  Changes:
+    - Stringify - Simplified no-op to_string calls when trying to stingify a string (less checks before returning it)
+---------------------------------------------------------------------------------------------------
 Version: 0.0.2
 Date: 2021.07.27
   Features:
