--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,13 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.3
 Date: 2021.08.00
+  Breaking Changes:
+    - Tester - Adding tests now validates the extra properties (such as testing if before/after are functions if they exist), a fatal error occurs if these validations fail
   Changes:
     - Debug - Switched to a more performant getinfo call
     - Stringify - Simplified no-op to_string calls when trying to stingify a string (less checks before returning it)
+    - Tester - Almost full rewrite of the tester underlying code
+    - Tester - Logs individual test group's successes during end report
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.2
 Date: 2021.07.27
